Condition non complet

--- a/lib/views/potin_page.erb
+++ b/lib/views/potin_page.erb
@@ -8,6 +8,7 @@
 			Son auteur : <%= params[id].author %><br>
 			Le contenu du potin : <%= params[id].content %>	
 		</p>	
+		<a href="/gossips/<%= id %>/edit">Editer le potin</a><br>
 		<a href="/">revenir a la page des potins</a>
 	</body> 
 </html>
