Not finished yet

--- a/lib/views/edit.erb
+++ b/lib/views/edit.erb
@@ -4,12 +4,11 @@
 	<title>Edit potin</title>
 </head>
 <body>
-	<h1>Mon super site de gossip du dossier views !</h1>
 		<a href="/gossips/<%= id %>">Retour</a>
 		<h3>Editer le potin n°<%= id %></h3>
-		<form action="/gossips/new/" method="POST">
-			Balance ton blase : <input type="text" name="gossip_author" /><br>
-			Balance ton blase : <input type="text" name="gossip_content" /><br>
+		<form action="/gossips/<%= id %>/edit" method="POST">
+			Nouveau blase : <input type="text" name="gossip_author" /><br>
+			Nouveau blase : <input type="text" name="gossip_content" /><br>
 			<input type="submit" value="Appliquer" />
 		</form>
 </body>
