--- a/lib/views/potin_page.erb
+++ b/lib/views/potin_page.erb
@@ -9,6 +9,6 @@
 			Le contenu du potin : <%= params[id].content %>	
 		</p>	
 		<a href="/gossips/<%= id %>/edit">Editer le potin</a><br>
-		<a href="/">revenir a la page des potins</a>
+		<a href="/">retour</a>
 	</body> 
 </html>
